Closed Bug 1778678 Opened 3 years ago Closed 3 years ago

AsyncPostOrder global is not thread safe

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox104 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file)

AsyncPostOrder is a global counter used when record the order in which modules had their AsyncEvaluating fields set to true. This is not thread safe since a single process can have multiple runtimes running on different threads.

This is not currently a problem for the browser since we only use modules on the main runtime at the moment (we don't support module workers yet). It could affect non-browser embeddings.

The code currently uses a global for this which is not thread safe as a single
process can have multiple runtimes.

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f3e7a356e319 Move async evaluating post order count to the rutime r=arai
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: