Bug 1778678 - Move async evaluating post order count to the rutime r=arai

The code currently uses a global for this which is not thread safe as a single
process can have multiple runtimes.

Differential Revision: https://phabricator.services.mozilla.com/D151369